<resources>
    <string name="app_name">LoveRecycle</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="userphone">用户电话</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="password2">确认密码</string>
    <string name="register">注册</string>
    <string name="university">大学</string>
    <string name="studentID">学号</string>
    <string name="OK">登录</string>

    <string name="Success">登录成功</string>
    <string name="Loading">登录中..</string>


    <string name="action_settings">Settings</string>
    <string name="tab_menu_main">主页</string>
    <string name="tab_menu_msg">订单</string>
    <string name="tab_menu_my">我的</string>


    <string name="title_login_register">登录/注册</string>
    <string name="action_get_verify_code">获取验证码</string>

    <string name="title_login">登录</string>
    <string name="title_login_by_verify_code">验证码登录</string>
    <string name="title_register">注册</string>
    <string name="lab_forget_password">忘记密码?</string>
    <string name="lab_login_by_verify_code">验证码登录</string>
    <string name="lab_login_by_password">密码登录</string>
    <string name="tip_please_input_phone_number">请输入手机号码</string>
    <string name="title_email_number">邮箱</string>
    <string name="title_password">密码</string>
    <string name="title_old_password">旧密码</string>
    <string name="hint_please_input_verify_code">请输入验证码</string>
    <string name="lab_verify_code">验证码</string>
    <string name="tip_email_number_error">无效的邮箱！</string>
    <string name="regex_email_number">^([a-z0-9A-Z]+[-|_|\.]?)+[a-z0-9A-Z]@([a-z0-9A-Z]+(-[a-z0-9A-Z]+)?\.)+[a-zA-Z]{2,}$</string>
    <string name="tip_verify_code_error">请输入验证码</string>
    <string name="regex_verify_code">^\\d{6}$</string>
    <string name="tip_password_error">密码必须是8~18位字母和数字的组合！</string>
    <string name="tip_new_password_error">新密码必须是8~18位字母和数字的组合！</string>
    <string name="regex_password">^(?:(?=.*[a-zA-Z])(?=.*[0-9])).{8,18}$</string>
    <string name="title_forget_password">重置密码</string>
    <string name="lab_register_account">点击注册即表示同意</string>


    <string name="advise_info">你的意见对我们来说至关重要，感谢你的反馈</string>
    <string name="advise_hint">欢迎吐槽提意见</string>
    <string name="advise_email">请填写邮箱，方便我们联系</string>
    <string name="advise_send">发送</string>

    <string name="changepsd_hint">通过你注册的邮箱，修改或找回密码</string>
    <string name="changepsd_email">填写邮箱，修改密码</string>
    <string name="changepsd_send">发送验证码</string>
    <string name="changepsd_code_hint">填写验证码</string>
    <string name="changepsd_password1_hint">输入新密码</string>
    <string name="changepsd_password2_hint">重复输入密码</string>
    <string name="changepsd_commit">修改密码</string>

    <string name="edit_info_my_name">用户名</string>
    <string name="edit_info_my_info">用户简介</string>
    <string name="edit_info_my_commit">修改信息</string>


</resources>
