<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="#95A1AA"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/uesrname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textColorHint="#95A1AA"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/studentid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/studentID"
        android:textColorHint="#95A1AA"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/university"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/university"
        android:textColorHint="#95A1AA"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="#95A1AA"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password2"
        android:textColorHint="#95A1AA"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />


    <Button
        android:id="@+id/login_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@color/colorPrimary" />

</LinearLayout>