<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@drawable/login_back"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="ui.LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/loverecycle" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/login"
            style="@style/Button1"
            android:checked="true"
            android:text="Login"
            android:layout_marginLeft="5dp" />
        <RadioButton
            android:id="@+id/register"
            style="@style/Button1"
            android:text="Register" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        >

        <FrameLayout
            android:id="@+id/fl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:id="@+id/ic_user"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_phone"
                tools:ignore="VectorDrawableCompat" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:textSize="15dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:met_clearButton="true"
                app:met_errorMessage="@string/tip_email_number_error"
                app:met_floatingLabel="normal"
                app:met_floatingLabelText="@string/title_email_number"
                app:met_regexp="@string/regex_email_number" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/fl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_password" />

            <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:textSize="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:met_clearButton="false"
                app:met_errorMessage="@string/tip_password_error"
                app:met_regexp="@string/regex_password" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        android:visibility="gone">

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:hint="@string/email"
            android:maxLines="1"
            android:textSize="15dp"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:hint="@string/username"
            android:textSize="15dp"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="none"
            />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:textSize="15dp"
            android:hint="输入密码"
            android:maxLines="1"
            android:inputType="textPassword"
            app:met_clearButton="false"
            app:met_errorMessage="@string/tip_new_password_error"
            app:met_regexp="@string/regex_password" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:textSize="15dp"
            android:maxLines="1"
            android:hint="重复密码"
            android:inputType="textPassword" />

        <FrameLayout
            android:id="@+id/fl_send_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="3dp">

            <com.xuexiang.xui.widget.button.roundbutton.RoundButton
                style="@style/RoundButton.Auto"
                android:id="@+id/btn_login_send"
                android:layout_height="40dp"
                android:layout_width="100dp"
                app:rb_borderColor="@color/xui_round_btn"
                android:textColor="#505050"
                android:layout_marginStart="36dp"
                android:textSize="15dp"
                android:enabled="true"
                android:text="@string/changepsd_send" />


            <EditText
                android:id="@+id/et_login_code"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/changepsd_code_hint"
                android:gravity="start"
                android:singleLine="true"
                android:textSize="15dp"
                android:layout_marginStart="220dp">
            </EditText>

        </FrameLayout>

    </LinearLayout>

    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
        android:id="@+id/btnSignIn"
        style="@style/SuperButton.Primary.Login"
        android:layout_marginTop="16dp"
        android:enabled="true"
        android:text="@string/login" />


</LinearLayout>