<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".ui.my.AdviseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/titlebar_advise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleMargin="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        android:background="?attr/colorPrimary">
        <TextView
            android:id="@+id/tv_toolbar_advise_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:singleLine="true"
            android:textColor="#505050"
            android:text="意见反馈" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_advise_hint"
        android:layout_width="match_parent"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@id/titlebar_advise"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/advise_info">
    </TextView>

    <EditText
        android:id="@+id/et_advise_content"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_advise_hint"
        android:hint="@string/advise_hint"
        android:gravity="start"
        android:maxLines="6"
        android:textSize="16dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp">
    </EditText>

    <EditText
        android:id="@+id/et_advise_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_advise_content"
        android:hint="@string/advise_email"
        android:gravity="start"
        android:maxLines="6"
        android:textSize="16dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="18dp">
    </EditText>

    <com.xuexiang.xui.widget.button.roundbutton.RoundButton
        style="@style/RoundButton.Auto"
        android:id="@+id/btn_advise_commit"
        android:layout_height="40dp"
        android:layout_width="200dp"
        app:rb_borderColor="@color/xui_round_btn"
        android:textColor="#505050"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/et_advise_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:enabled="true"
        android:text="@string/advise_send" />


</androidx.constraintlayout.widget.ConstraintLayout>