<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/titlebar0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleMargin="0dp"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        android:background="?attr/colorPrimary">
        <TextView
            android:id="@+id/tv_toolbar_name0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18dp"
            android:singleLine="true"
            android:textColor="#505050"
            android:text="居中显示居中显示" />
    </androidx.appcompat.widget.Toolbar>



    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_main"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_main"
            android:text="@string/tab_menu_main" />

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_message"
            android:text="@string/tab_menu_msg" />

        <RadioButton
            android:id="@+id/rb_my"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_my"
            android:text="@string/tab_menu_my" />

    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/div_white" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
        android:layout_below="@id/titlebar0"></FrameLayout>


</RelativeLayout>
